--- a/AndroidApp/app/src/main/res/layout/category_view.xml
+++ b/AndroidApp/app/src/main/res/layout/category_view.xml
@@ -25,8 +25,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:gravity="center"
             app:layout_constraintTop_toTopOf="parent"
             tools:layout_editor_absoluteX="0dp">
+
+            <ImageView
+                android:id="@+id/ivCategoryImage"
+                android:layout_width="97dp"
+                android:layout_height="82dp"
+                android:minHeight="150dp" />
 
             <TextView
                 android:id="@+id/categoryName"
@@ -45,6 +52,28 @@
                 android:layout_marginTop="5dp"
                 android:text="Опис"
                 android:textSize="14dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <Button
+                    android:id="@+id/btnEdit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="16dp"
+                    android:text="Змінити" />
+
+                <Button
+                    android:id="@+id/btnDelete"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Видалить" />
+
+            </LinearLayout>
 
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
